[project]
name = "api_testing"
version = "0.1.0"
description = "A framework for API testing using pytest"
authors = [
    { name = "Ishan Sharma" }
]
requires-python = ">=3.8"

dependencies = [
    "requests>=2.31.0",
    "pytest>=7.4.0",
    "pytest-xdist>=3.6.1",
    "pytest-mock>=3.14.0",
    "Faker>=19.13.0"
]

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"
